--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.7.1'	//쿼리 파라메터 값을 직접 표시해주는 라이브러리로 디버깅할때 유용함
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
 	implementation 'junit:junit:4.13.1'
 	implementation 'junit:junit:4.13.1'
 	compileOnly 'org.projectlombok:lombok'
